# axum-backend-server

./: README.md
axum-backend/: .env
axum-backend/html/: form.html  home.html
axum-backend/src/: handlers.rs  main.rs
axum_project/: .env  Cargo.toml  Dockerfile  default.conf  docker-compose.yml  init.sql  nginx.conf
axum_project/css/: style.css
axum_project/html/: about.html  form.html  index.html  success.html
axum_project/src/: handlers.rs  main.rs
