[package]
name = "axum-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
tokio-postgres = "0.7.8"
bb8-postgres = "0.8.1"
dotenv = "0.15.0"